# interactive-multimedia-systems

background-modeling/: README.md  bg_gmm_compare.py
perceptual-audio-quality-assessment/: audiomeasures.py  audiovariants.py  loader.py  main.py  maingui.py  player.py  pyproject.toml  results.py
perceptual-audio-quality-assessment/samples/: README.md
perceptual-audio-quality-assessment/scores/: accoustic.json  rock.json  speech.json
perceptual-image-quality-assessment/: grayscale.py  helpers.py  imagemeasures.py  imagevariants.py  main.py  results.py  survey-results.json  survey.py
perceptual-image-quality-assessment/web/: index.html  script.js  style.css
rle-and-quad-tree-compression/: main.py
rle-and-quad-tree-compression/images/: README.md
sound-synthesiser/: GUI.py
